data/derived/fa15/progs/unify/prog2098.ml.out
Characters 59-63:
  wwhile (funt,b);;
          ^^^^
Error: This expression has type 'a * bool
       but an expression was expected of type 'b -> 'b * bool
